--- a/biblio.bib
+++ b/biblio.bib
@@ -92,6 +92,20 @@
    year = {2019},
 }
 
+
+
+@report{Scheffer2002,
+   abstract = {What is done with missing data? Does the missingness mechanism matter? Is it a good idea to just use the default options in the major statistical packages? Even some highly trained statisticians do this, so can the non-statistician analysing their own data cope with some of the better techniques for handling missing data? This paper shows how the mean and standard deviation are affected by different methods of imputation, given different missingness mechanisms. Better options than the standard default options are available in the major statistical software, offering the chance to 'do the right thing' to the statistical and non-statistical community alike. Introduction Missing data plagues almost all surveys, and quite a number of designed experiments. No matter how carefully an investigator tries to have all questions fully responded to in a survey, or how well designed an experiment is; examples of how this can occur are when a question is unanswered in a survey, or a flood has removed a crop planted close to a river. The problem is, how to deal with missing data, once it has been deemed impossible to recover the actual missing values. Traditional approaches include case deletion and mean imputation; (occasionally provided as an option with some software), These are the default for the major Statistical packages. In the last decade interest has centred on Regression Imputation, and Imputation of values using the EM (Expectation-Maximisation) algorithm, both of which will perform Single Imputation. More recently Multiple Imputation has become available, and is now being included as an option in the mainstream packages. Here I will look at eight different methods of imputation, and compare how well these methods perform (what happens to the means and standard deviations) under different missingness mechanisms with different amounts of missing data.},
+   author = {Judi Scheffer},
+   journal = {Res. Lett. Inf. Math. Sci},
+   pages = {153-160},
+   title = {Dealing with Missing Data},
+   volume = {3},
+   url = {http://www.massey.ac.nz/~wwiims/research/letters/},
+   year = {2002},
+}
+
+
 @article{Solis2022,
    abstract = {Objective Analysis of longitudinal data can provide neonatologists with tools that can help predict clinical deterioration and improve outcomes. The aim of this study is to analyze continuous monitoring data in newborns, using vital signs to develop predictive models for intensive care admission and time to discharge. Study Design We conducted a retrospective cohort study, including term and preterm newborns with respiratory distress patients admitted to the neonatal ward. Clinical and epidemiological data, as well as mean heart rate and saturation, at every minute for the first 12 hours of admission were collected. Multivariate mixed, survival and joint models were developed. Results A total of 56,377 heart rate and 56,412 oxygen saturation data were analyzed from 80 admitted patients. Of them, 73 were discharged home and 7 required transfer to the intensive care unit (ICU). Longitudinal evolution of heart rate (p < 0.01) and oxygen saturation (p = 0.01) were associated with time to discharge, as well as birth weight (p < 0.01) and type of delivery (p < 0.01). Longitudinal heart rate evolution (p < 0.01) and fraction of inspired oxygen at admission at the ward (p < 0.01) predicted neonatal ICU (NICU) admission. Conclusion Longitudinal evolution of heart rate can help predict time to transfer to intensive care, and both heart rate and oxygen saturation can help predict time to discharge. Analysis of continuous monitoring data in patients admitted to neonatal wards provides useful tools to stratify risks and helps in taking medical decisions. Key Points Continuous monitoring of vital signs can help predict and prevent clinical deterioration in neonatal patients. In our study, longitudinal analysis of heart rate and oxygen saturation predicted time to discharge and intensive care admission. More studies are needed to prospectively prove that these models can helpmake clinical decisions and stratify patients' risks.},
    author = {Gonzalo Solís-García and Elena Maderuelo-Rodríguez and Teresa Perez-Pérez and Laura Torres-Soblechero and Ana Gutiérrez-Vélez and Cristina Ramos-Navarro and Raúl López-Martínez and Manuel Sánchez-Luna},
