--- a/main.tex
+++ b/main.tex
@@ -464,6 +464,9 @@ Este documento constituye una guía (que sirve a su vez de plantilla) para la el
 \input{lib/chapter4.tex}
 \newpage
 
+\input{lib/chapter5.tex}
+\newpage
+
 %%%%%%%%%%%%%%%%%%% - TÍTULOS - %%%%%%%%%%%%%%%%%%
 
 \section{TÍTULOS} \label{sec:titulos}
